--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <section class="t-center space">
         <h1>Hi, i'm Quentin Rulleau<br>I'm full stack developer.</h1>
-        <a class="btn space" href="#">Let's make something great</a>
+        <a class="btn space main" href="#">Let's make something great</a>
     </section>
     <section id="about">
         <img src="img/wave.svg" alt="">
@@ -41,9 +41,11 @@
                         <span class="line"></span>
                         <p>I'm a trained full stack developer with professional experience in both front-end and back-end development. I'd love to help you with your next project!
                         </p>
-                        <p>I'm open for remote work so please feel free to <span>contact me.</span></p>
+                        <p>I'm open for remote work so please feel free to <a href="#contact"><span>contact me.</span></a></p>
                         <h3>Contact Link</h3>
                         <span class="line"></span>
+                        <a href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/qrulleau"><i class="fab fa-github"></i></a>
                         <p>quentin.rulleau@yahoo.com</p>
                     </div>
                     <div class="col-1">
@@ -58,10 +60,11 @@
                     </div>
                 </div>
                 <div class="t-center mt-83">
-                    <a class="btn" href="#">Check out my work</a>
+                    <a class="btn main main" href="#">Check out my work</a>
                 </div>
             </div>
         </div>
+        <div class="bg-wave"></div>
         <img src="img/wave-reverse.svg" alt="">
     </section>
     <section class="white" id="project">
@@ -78,8 +81,8 @@
                     <p>Full Stack Developer · Orbis Communications</p>
                     <p>The free experiential learning and recruitment solution available to all post-secondary institutions,<br>post-secondary students, and employers in Canada. </p>
                     <div class="d-flex space-description-btn">
-                        <a class="btn" href="#">Visit lorem</a>
-                        <a class="btn" href="#">Review the code base</a>
+                        <a class="btn main" href="#">Visit lorem</a>
+                        <a class="btn main" href="#">Review the code base</a>
                     </div>
                 </div>
                 <div>
@@ -88,7 +91,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="contact">
         <img src="img/wave.svg" alt="">
         <div class="bgc">
             <h2>Contact</h2>
@@ -97,17 +100,17 @@
                 <div class="rPosition">
                     <i class="material-icon">person</i>
                     <label class="aPosition" for="">Name</label>
-                    <input type="text">
+                    <input class="aPosition" type="text">
                 </div>
                 <div class="rPosition">
                     <i class="material-icon">email</i>
                     <label class="aPosition" for="">Email</label>
-                    <input type="email">
+                    <input class="aPosition" type="email">
                 </div>
                 <div class="rPosition">
                     <i class="material-icon">comment</i>
                     <label class="aPosition" for="">Message</label>
-                    <textarea name="" id="" rows="1"></textarea>
+                    <textarea class="aPosition" name="" id="" rows="1"></textarea>
                 </div>
                 <input type="submit" value="Submit">
             </form>
@@ -122,19 +125,21 @@
                     <div class="nav">
                         <h5>Navigation</h5>
                         <a href="#"><p>Home</p></a>
-                        <a href="#"><p>About</p></a>
-                        <a href="#"><p>Projects</p></a>
-                        <a href="#"><p>Contact</p></a>
+                        <a href="#about"><p>About</p></a>
+                        <a href="#project"><p>Projects</p></a>
+                        <a href="#contact"><p>Contact</p></a>
                     </div>
                     <div>
                         <h5>Follow me</h5>
+                        <a href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/qrulleau"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
             <p class="t-center copyright">Quentin Rulleau ©2020</p>
         </section>
     </footer>
-    
+    <script src="https://kit.fontawesome.com/d25cb3997c.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
