--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <section class="t-center space">
-        <h1>Hi, i'm Quentin Rulleau<br>I'm full stack developer.</h1>
+        <h1>Hi, I'm Quentin Rulleau<br>I'm Fullstack developer.</h1>
         <a class="btn space main" href="#">Let's make something great</a>
     </section>
     <section id="about">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="t-center mt-83">
-                    <a class="btn main main" href="#">Check out my work</a>
+                    <a class="btn main" href="#project">Check out my work</a>
                 </div>
             </div>
         </div>
