animation css fix

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="btn space main" href="#">Let's make something great</a>
     </section>
     <section id="about">
-        <img src="img/wave.svg" alt="">
+        <div class="bg-wave"></div>
         <div class="bgc">
             <h2>About</h2>
             <span class="line"></span>
@@ -64,8 +64,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-wave"></div>
-        <img src="img/wave-reverse.svg" alt="">
+        <div class="bg-wave reverse"></div>
     </section>
     <section class="white" id="project">
         <div class="t-center">
@@ -92,7 +91,7 @@
         </div>
     </section>
     <section id="contact">
-        <img src="img/wave.svg" alt="">
+        <div class="bg-wave"></div>
         <div class="bgc">
             <h2>Contact</h2>
             <span class="line"></span>
@@ -112,31 +111,33 @@
                     <label class="aPosition" for="">Message</label>
                     <textarea class="aPosition" name="" id="" rows="1"></textarea>
                 </div>
-                <input type="submit" value="Submit">
+                <button type="submit">Submit</button>
             </form>
         </div>
     </section>
     <footer>
         <section>
-            <img class="bgc" src="img/wave-black.svg" alt="">
-            <p class="logo t-center">QUENTIN<span>RULLEAU</span></p>
-            <div class="container-footer">
-                <div class="d-flex">
-                    <div class="nav">
-                        <h5>Navigation</h5>
-                        <a href="#"><p>Home</p></a>
-                        <a href="#about"><p>About</p></a>
-                        <a href="#project"><p>Projects</p></a>
-                        <a href="#contact"><p>Contact</p></a>
-                    </div>
-                    <div>
-                        <h5>Follow me</h5>
-                        <a href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/qrulleau"><i class="fab fa-github"></i></a>
+            <div class="bg-wave black-wave"></div>
+            <div class="bg-black">
+                <p class="logo t-center">QUENTIN<span>RULLEAU</span></p>
+                <div class="container-footer">
+                    <div class="d-flex">
+                        <div class="nav">
+                            <h5>Navigation</h5>
+                            <a href="#"><p>Home</p></a>
+                            <a href="#about"><p>About</p></a>
+                            <a href="#project"><p>Projects</p></a>
+                            <a href="#contact"><p>Contact</p></a>
+                        </div>
+                        <div>
+                            <h5>Follow me</h5>
+                            <a href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/qrulleau"><i class="fab fa-github"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
             <p class="t-center copyright">Quentin Rulleau ©2020</p>
+        </div>
         </section>
     </footer>
     <script src="https://kit.fontawesome.com/d25cb3997c.js" crossorigin="anonymous"></script>
