--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
     </header>
     <section class="t-center space">
-        <h1 class="aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">Hi, I'm Quentin Rulleau<br>I'm Full Stack developer.</h1>
-        <a data-aos="zoom-in" data-aos-delay="500" class="btn space main aos-init aos-animate" href="#about">Let's make something great</a>
+        <h1 data-aos="zoom-in" data-aos-delay="200">Hi, I'm Quentin Rulleau<br>I'm Full Stack developer.</h1>
+        <a data-aos="zoom-in" data-aos-delay="500" class="btn space main" href="#about">Let's make something great</a>
     </section>
     <section id="about">
         <div class="bg-wave"></div>
