--- a/index.html
+++ b/index.html
@@ -94,26 +94,28 @@
     <section id="contact">
         <div class="bg-wave"></div>
         <div class="bgc">
-            <h2 data-aos="fade-left" class="aos-init aos-animate">Contact</h2>
-            <span data-aos="fade-left" data-aos-delay="500" class="aos-init aos-animate line"></span>
-            <form action="https://formspree.io/xnqgajbv" method="POST">
-                <div data-aos="fade-left" data-aos-delay="600" class="aos-init aos-animate line rPosition">
-                    <i class="material-icon">person</i>
-                    <input class="aPosition inputHover" type="text" id="name" name="name" required>
-                    <label class="aPosition labelFocus" for="name">Name</label>
-                </div>
-                <div data-aos="fade-left" data-aos-delay="700" class="rPosition aos-init aos-animate">
-                    <i class="material-icon">email</i>
-                    <input class="aPosition inputHover form-control" type="email" id="email" name="email" required>
-                    <label class="aPosition labelFocus" for="email" >Email</label>
-                </div>
-                <div data-aos="fade-left" data-aos-delay="800" class="rPosition aos-init aos-animate">
-                    <i class="material-icon">comment</i>
-                    <textarea class="aPosition inputHover" rows="1" id="message" name="message" required></textarea>
-                    <label class="aPosition labelFocus" for="message">Message</label>
-                </div>
-                <button class="aos-init aos-animate" data-aos="fade-left" data-aos-delay="900" type="submit">Submit</button>
-            </form>
+            <div class="container">
+                <h2 data-aos="fade-left" class="aos-init aos-animate">Contact</h2>
+                <span data-aos="fade-left" data-aos-delay="500" class="aos-init aos-animate line"></span>
+                <form action="https://formspree.io/xnqgajbv" method="POST">
+                    <div data-aos="fade-left" data-aos-delay="600" class="aos-init aos-animate line rPosition">
+                        <i class="material-icon">person</i>
+                        <input class="aPosition inputHover" type="text" id="name" name="name" required>
+                        <label class="aPosition labelFocus" for="name">Name</label>
+                    </div>
+                    <div data-aos="fade-left" data-aos-delay="700" class="rPosition aos-init aos-animate">
+                        <i class="material-icon">email</i>
+                        <input class="aPosition inputHover form-control" type="email" id="email" name="email" required>
+                        <label class="aPosition labelFocus" for="email" >Email</label>
+                    </div>
+                    <div data-aos="fade-left" data-aos-delay="800" class="rPosition aos-init aos-animate">
+                        <i class="material-icon">comment</i>
+                        <textarea class="aPosition inputHover" rows="1" id="message" name="message" required></textarea>
+                        <label class="aPosition labelFocus" for="message">Message</label>
+                    </div>
+                    <button class="aos-init aos-animate" data-aos="fade-left" data-aos-delay="900" type="submit">Submit</button>
+                </form>
+            </div>
         </div>
     </section>
     <footer>
@@ -137,14 +139,14 @@
                         </div>
                     </div>
                 </div>
-            <p class="t-center copyright">Quentin Rulleau ©2020</p>
-        </div>
+                <p class="t-center copyright">Quentin Rulleau ©2020</p>
+            </div>
         </section>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>   
         AOS.init(); 
-     </script>
+    </script>
     <script src="https://kit.fontawesome.com/d25cb3997c.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
