--- a/index.html
+++ b/index.html
@@ -1,153 +1,370 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quentin Rulleau | Developer fullstack</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    
-</head>
-<body>
-    <header>
-        <div class="container">
-            <div class="d-flex">
-                <p class="logo">QUENTIN<span>RULLEAU</span></p>
-                <nav>
-                    <ul>
-                        <li><a href="#">home</a></li>
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#project">projects</a></li>
-                        <li><a href="#contact">contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <section class="t-center space">
-        <h1 data-aos="zoom-in" data-aos-delay="200">Hi, I'm Quentin Rulleau<br>I'm Full Stack developer.</h1>
-        <a data-aos="zoom-in" data-aos-delay="500" class="btn space main" href="#about">Let's make something great</a>
-    </section>
-    <section id="about">
-        <div class="bg-wave"></div>
-        <div class="bgc">
-            <h2 class="aos-init aos-animate" data-aos="fade-right">About</h2>
-            <span data-aos-delay="250" class="line aos-init aos-animate" data-aos="fade-right"></span>
-            <div class="container-about">
-                <div class="d-flex">
-                    <div class="col">
-                        <h3 data-aos="fade-right" data-aos-delay="400" class="aos-init aos-animate">Need help bringing your idea to life ?</h3>
-                        <span data-aos="fade-right" data-aos-delay="500" class="line aos-init aos-animate"></span>
-                        <p data-aos="fade-right" data-aos-delay="500" class="aos-init aos-animate">I'm a trained full stack developer with professional experience in both front-end and back-end development. I'd love to help you with your next project!
-                        </p>
-                        <p data-aos="fade-right" data-aos-delay="600" class="aos-init aos-animate">I'm open for remote work so please feel free to <a href="#contact"><span>contact me.</span></a></p>
-                        <h3 data-aos="fade-right" data-aos-delay="700" class="aos-init aos-animate">Contact Link</h3>
-                        <span data-aos="fade-right" data-aos-delay="700" class="line aos-init aos-animate"></span>
-                        <a data-aos="fade-right" data-aos-delay="800" class=" aos-init aos-animate" href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"><i class="fab fa-linkedin"></i></a>
-                        <a data-aos="fade-right" data-aos-delay="900" class=" aos-init aos-animate" href="https://github.com/qrulleau"><i class="fab fa-github"></i></a>
-                        <p data-aos="fade-right" data-aos-delay="800" class=" aos-init aos-animate">quentin.rulleau@yahoo.com</p>
-                    </div>
-                    <div class="col-1">
-                        <h3 data-aos="fade-left" data-aos-delay="400" class="aos-init aos-animate" >Skills</h3>
-                        <span data-aos="fade-left" data-aos-delay="500" class="line aos-init aos-animate"></span>
-                        <h4 data-aos="fade-left" data-aos-delay="600" class="aos-init aos-animate">Front-end</h4>
-                        <p data-aos="fade-left" data-aos-delay="700" class="aos-init aos-animate">JavaScript, React, Vue.js, CSS3, Sass, Webpack, HTML5</p>
-                        <h4 data-aos="fade-left" data-aos-delay="800" class="aos-init aos-animate">Back-end</h4>
-                        <p data-aos="fade-left" data-aos-delay="900" class="aos-init aos-animate">C, Node.Js, Shopify</p>
-                        <h4 data-aos="fade-left" data-aos-delay="1000" class="aos-init aos-animate">Services</h4>
-                        <p data-aos="fade-left" data-aos-delay="1100" class="aos-init aos-animate">Firebase, Azure, Shopify</p>
-                    </div>
-                </div>
-                <div data-aos="fade-right" data-aos-delay="600" class="aos-init aos-animate t-center mt-83">
-                    <a class="btn main" href="#project">Check out my work</a>
-                </div>
-            </div>
-        </div>
-        <div class="bg-wave reverse"></div>
-    </section>
-    <section class="white" id="project">
-        <div class="t-center">
-            <h2 data-aos="fade-right" class=" aos-init aos-animate">Projects</h2>
-            <span data-aos="fade-right" data-aos-delay="250" class="aos-init aos-animate line"></span>
-            <h3 data-aos="zoom-in" data-aos-delay="300" class="aos-init aos-animate">A bunch of projects I've worked on.</h3>
-        </div>
-        <div class="container">
-            <div class="d-flex">
-                <div class="project-description">
-                    <p data-aos="fade-right" class="aos-init aos-animate smallTittle">Profesionnal</p>
-                    <h2 data-aos="fade-right" data-aos-delay="100" class="aos-init aos-animate">Outcome Campus Connect</h2>
-                    <p data-aos="fade-right" data-aos-delay="200" class="aos-init aos-animate">Full Stack Developer · Orbis Communications</p>
-                    <p data-aos="fade-right" data-aos-delay="300" class="aos-init aos-animate">The free experiential learning and recruitment solution available to all post-secondary institutions,<br>post-secondary students, and employers in Canada. </p>
-                    <div data-aos="fade-right" data-aos-delay="400" class="aos-init aos-animate d-flex space-description-btn">
-                        <a class="btn main" href="#">Visit lorem</a>
-                        <a class="btn main" href="#">Review the code base</a>
-                    </div>
-                </div>
-                <div>
-                    <img data-aos="fade-left" data-aos-delay="500" class="aos-init aos-animate line" src="img/test.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contact">
-        <div class="bg-wave"></div>
-        <div class="bgc">
-            <div class="container">
-                <h2 data-aos="fade-left" class="aos-init aos-animate">Contact</h2>
-                <span data-aos="fade-left" data-aos-delay="500" class="aos-init aos-animate line"></span>
-                <form action="https://formspree.io/xnqgajbv" method="POST">
-                    <div data-aos="fade-left" data-aos-delay="600" class="aos-init aos-animate line rPosition">
-                        <i class="material-icon">person</i>
-                        <input class="aPosition inputHover" type="text" id="name" name="name" required>
-                        <label class="aPosition labelFocus" for="name">Name</label>
-                    </div>
-                    <div data-aos="fade-left" data-aos-delay="700" class="rPosition aos-init aos-animate">
-                        <i class="material-icon">email</i>
-                        <input class="aPosition inputHover form-control" type="email" id="email" name="email" required>
-                        <label class="aPosition labelFocus" for="email" >Email</label>
-                    </div>
-                    <div data-aos="fade-left" data-aos-delay="800" class="rPosition aos-init aos-animate">
-                        <i class="material-icon">comment</i>
-                        <textarea class="aPosition inputHover" rows="1" id="message" name="message" required></textarea>
-                        <label class="aPosition labelFocus" for="message">Message</label>
-                    </div>
-                    <button class="aos-init aos-animate" data-aos="fade-left" data-aos-delay="900" type="submit">Submit</button>
-                </form>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <section>
-            <div class="bg-wave black-wave"></div>
-            <div class="bg-black">
-                <p class="logo t-center">QUENTIN<span>RULLEAU</span></p>
-                <div class="container-footer">
-                    <div class="d-flex">
-                        <div class="nav">
-                            <h5>Navigation</h5>
-                            <a href="#"><p>Home</p></a>
-                            <a href="#about"><p>About</p></a>
-                            <a href="#project"><p>Projects</p></a>
-                            <a href="#contact"><p>Contact</p></a>
-                        </div>
-                        <div class="social">
-                            <h5>Follow me</h5>
-                            <a href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/qrulleau"><i class="fab fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <p class="t-center copyright">Quentin Rulleau ©2020</p>
-            </div>
-        </section>
-    </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>   
-        AOS.init(); 
-    </script>
-    <script src="https://kit.fontawesome.com/d25cb3997c.js" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Quentin Rulleau | Developer fullstack</title>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+		<link rel="stylesheet" href="css/main.css" />
+		<link href="css/hamburgers.css" rel="stylesheet" />
+	</head>
+	<body>
+		<header>
+			<div class="container">
+				<div class="d-flex">
+					<p class="logo">QUENTIN<span>RULLEAU</span></p>
+					<nav>
+						<ul>
+							<li><a href="#">home</a></li>
+							<li><a href="#about">about</a></li>
+							<li><a href="#project">projects</a></li>
+							<li><a href="#contact">contact</a></li>
+						</ul>
+						<button class="hamburger" type="button">
+							<span class="hamburger-box">
+								<span class="hamburger-inner"></span>
+							</span>
+						</button>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<section class="t-center space landing-page">
+			<h1 data-aos="zoom-in" data-aos-delay="200">
+				Hi, I'm Quentin Rulleau<br />I'm Full Stack developer.
+			</h1>
+			<a
+				data-aos="zoom-in"
+				data-aos-delay="500"
+				class="btn space main"
+				href="#about"
+				>Let's make something great</a
+			>
+		</section>
+		<section id="about">
+			<div class="bg-wave"></div>
+			<div class="bgc">
+				<h2 class="aos-init aos-animate" data-aos="fade-right">About</h2>
+				<span
+					data-aos-delay="250"
+					class="line aos-init aos-animate"
+					data-aos="fade-right"
+				></span>
+				<div class="container-about">
+					<div class="d-flex">
+						<div class="col">
+							<h3
+								data-aos="fade-right"
+								data-aos-delay="400"
+								class="aos-init aos-animate"
+							>
+								Need help bringing your idea to life ?
+							</h3>
+							<span
+								data-aos="fade-right"
+								data-aos-delay="500"
+								class="line aos-init aos-animate"
+							></span>
+							<p
+								data-aos="fade-right"
+								data-aos-delay="500"
+								class="aos-init aos-animate"
+							>
+								I'm a trained full stack developer with professional experience
+								in both front-end and back-end development. I'd love to help you
+								with your next project!
+							</p>
+							<p
+								data-aos="fade-right"
+								data-aos-delay="600"
+								class="aos-init aos-animate"
+							>
+								I'm open for remote work so please feel free to
+								<a href="#contact"><span>contact me.</span></a>
+							</p>
+							<h3
+								data-aos="fade-right"
+								data-aos-delay="700"
+								class="aos-init aos-animate"
+							>
+								Contact Link
+							</h3>
+							<span
+								data-aos="fade-right"
+								data-aos-delay="700"
+								class="line aos-init aos-animate"
+							></span>
+							<a
+								data-aos="fade-right"
+								data-aos-delay="800"
+								class="aos-init aos-animate"
+								href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"
+								><i class="fab fa-linkedin"></i
+							></a>
+							<a
+								data-aos="fade-right"
+								data-aos-delay="900"
+								class="aos-init aos-animate"
+								href="https://github.com/qrulleau"
+								><i class="fab fa-github"></i
+							></a>
+							<p
+								data-aos="fade-right"
+								data-aos-delay="800"
+								class="aos-init aos-animate"
+							>
+								quentin.rulleau@yahoo.com
+							</p>
+						</div>
+						<div class="col-1">
+							<h3
+								data-aos="fade-left"
+								data-aos-delay="400"
+								class="aos-init aos-animate"
+							>
+								Skills
+							</h3>
+							<span
+								data-aos="fade-left"
+								data-aos-delay="500"
+								class="line aos-init aos-animate"
+							></span>
+							<h4
+								data-aos="fade-left"
+								data-aos-delay="600"
+								class="aos-init aos-animate"
+							>
+								Front-end
+							</h4>
+							<p
+								data-aos="fade-left"
+								data-aos-delay="700"
+								class="aos-init aos-animate"
+							>
+								JavaScript, React, Vue.js, CSS3, Sass, Webpack, HTML5
+							</p>
+							<h4
+								data-aos="fade-left"
+								data-aos-delay="800"
+								class="aos-init aos-animate"
+							>
+								Back-end
+							</h4>
+							<p
+								data-aos="fade-left"
+								data-aos-delay="900"
+								class="aos-init aos-animate"
+							>
+								C, Node.Js, Shopify
+							</p>
+							<h4
+								data-aos="fade-left"
+								data-aos-delay="1000"
+								class="aos-init aos-animate"
+							>
+								Services
+							</h4>
+							<p
+								data-aos="fade-left"
+								data-aos-delay="1100"
+								class="aos-init aos-animate"
+							>
+								Firebase, Azure, Shopify
+							</p>
+						</div>
+					</div>
+					<div
+						data-aos="fade-right"
+						data-aos-delay="600"
+						class="aos-init aos-animate t-center mt-83"
+					>
+						<a class="btn main" href="#project">Check out my work</a>
+					</div>
+				</div>
+			</div>
+			<div class="bg-wave reverse"></div>
+		</section>
+		<section class="white" id="project">
+			<div class="t-center">
+				<h2 data-aos="fade-right" class="aos-init aos-animate">Projects</h2>
+				<span
+					data-aos="fade-right"
+					data-aos-delay="250"
+					class="aos-init aos-animate line"
+				></span>
+				<h3
+					data-aos="zoom-in"
+					data-aos-delay="300"
+					class="aos-init aos-animate"
+				>
+					A bunch of projects I've worked on.
+				</h3>
+			</div>
+			<div class="container">
+				<div class="d-flex project">
+					<div class="project-description">
+						<p data-aos="fade-right" class="aos-init aos-animate smallTittle">
+							Profesionnal
+						</p>
+						<h2
+							data-aos="fade-right"
+							data-aos-delay="100"
+							class="aos-init aos-animate"
+						>
+							Outcome Campus Connect
+						</h2>
+						<p
+							data-aos="fade-right"
+							data-aos-delay="200"
+							class="aos-init aos-animate"
+						>
+							Full Stack Developer · Orbis Communications
+						</p>
+						<p
+							data-aos="fade-right"
+							data-aos-delay="300"
+							class="aos-init aos-animate"
+						>
+							The free experiential learning and recruitment solution available
+							to all post-secondary institutions,<br />post-secondary students,
+							and employers in Canada.
+						</p>
+						<div
+							data-aos="fade-right"
+							data-aos-delay="400"
+							class="aos-init aos-animate d-flex space-description-btn"
+						>
+							<a class="btn main" href="#">Visit lorem</a>
+							<a class="btn main" href="#">Review the code base</a>
+						</div>
+					</div>
+					<div class="presentation-project">
+						<img
+							data-aos="fade-left"
+							data-aos-delay="500"
+							class="aos-init aos-animate line"
+							src="img/test.jpg"
+							alt=""
+						/>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="contact">
+			<div class="bg-wave"></div>
+			<div class="bgc">
+				<div class="container">
+					<h2 data-aos="fade-left" class="aos-init aos-animate">Contact</h2>
+					<span
+						data-aos="fade-left"
+						data-aos-delay="500"
+						class="aos-init aos-animate line"
+					></span>
+					<form action="https://formspree.io/xnqgajbv" method="POST">
+						<div
+							data-aos="fade-left"
+							data-aos-delay="600"
+							class="aos-init aos-animate line rPosition"
+						>
+							<i class="material-icon">person</i>
+							<input
+								class="aPosition inputHover"
+								type="text"
+								id="name"
+								name="name"
+								required
+							/>
+							<label class="aPosition labelFocus" for="name">Name</label>
+						</div>
+						<div
+							data-aos="fade-left"
+							data-aos-delay="700"
+							class="rPosition aos-init aos-animate"
+						>
+							<i class="material-icon">email</i>
+							<input
+								class="aPosition inputHover form-control"
+								type="email"
+								id="email"
+								name="email"
+								required
+							/>
+							<label class="aPosition labelFocus" for="email">Email</label>
+						</div>
+						<div
+							data-aos="fade-left"
+							data-aos-delay="800"
+							class="rPosition aos-init aos-animate"
+						>
+							<i class="material-icon">comment</i>
+							<textarea
+								class="aPosition inputHover"
+								rows="1"
+								id="message"
+								name="message"
+								required
+							></textarea>
+							<label class="aPosition labelFocus" for="message">Message</label>
+						</div>
+						<div class="d-flex start">
+							<button
+								class="aos-init aos-animate"
+								data-aos="fade-left"
+								data-aos-delay="900"
+								type="submit"
+							>
+								Submit
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<section>
+				<div class="bg-wave black-wave"></div>
+				<div class="bg-black">
+					<p class="logo t-center">QUENTIN<span>RULLEAU</span></p>
+					<div class="container-footer">
+						<div class="d-flex">
+							<div class="nav">
+								<h5>Navigation</h5>
+								<a href="#"><p>Home</p></a>
+								<a href="#about"><p>About</p></a>
+								<a href="#project"><p>Projects</p></a>
+								<a href="#contact"><p>Contact</p></a>
+							</div>
+							<div class="social">
+								<h5>Follow me</h5>
+								<a href="https://www.linkedin.com/in/quentin-rulleau-4b5822179/"
+									><i class="fab fa-linkedin"></i
+								></a>
+								<a href="https://github.com/qrulleau"
+									><i class="fab fa-github"></i
+								></a>
+							</div>
+						</div>
+					</div>
+					<p class="t-center copyright">Quentin Rulleau ©2020</p>
+				</div>
+			</section>
+		</footer>
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script>
+			AOS.init();
+		</script>
+		<script
+			src="https://kit.fontawesome.com/d25cb3997c.js"
+			crossorigin="anonymous"
+		></script>
+		<script src="js/main.js"></script>
+	</body>
 </html>
