--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<li><a href="#project">projects</a></li>
 							<li><a href="#contact">contact</a></li>
 						</ul>
-						<button class="hamburger" type="button">
+						<button class="hamburger hamburger--spring" type="button">
 							<span class="hamburger-box">
 								<span class="hamburger-inner"></span>
 							</span>
