--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</header>
 		<section class="t-center space landing-page">
 			<h1 data-aos="zoom-in" data-aos-delay="200">
-				Hi, I'm Quentin Rulleau<br />I'm Full Stack developer.
+				Hi, I'm Quentin Rulleau<br />I'm Front End developer.
 			</h1>
 			<a
 				data-aos="zoom-in"
@@ -78,9 +78,8 @@
 								data-aos-delay="500"
 								class="aos-init aos-animate"
 							>
-								I'm a trained full stack developer with professional experience
-								in both front-end and back-end development. I'd love to help you
-								with your next project!
+								I'm a junior Front End developer with small professional
+								experience. I'd love to help you with your next project!
 							</p>
 							<p
 								data-aos="fade-right"
@@ -142,42 +141,42 @@
 								data-aos-delay="600"
 								class="aos-init aos-animate"
 							>
-								Front-end
+								Languages
 							</h4>
 							<p
 								data-aos="fade-left"
 								data-aos-delay="700"
 								class="aos-init aos-animate"
 							>
-								JavaScript, React, Vue.js, CSS3, Sass, Webpack, HTML5
+								JavaScript, CSS3, HTML5, SQL
 							</p>
 							<h4
 								data-aos="fade-left"
 								data-aos-delay="800"
 								class="aos-init aos-animate"
 							>
-								Back-end
+								Front-end Development
 							</h4>
 							<p
 								data-aos="fade-left"
 								data-aos-delay="900"
 								class="aos-init aos-animate"
 							>
-								C, Node.Js, Shopify
+								Vue.js, Nuxt.Js, Webpack, Vuetify
 							</p>
 							<h4
 								data-aos="fade-left"
 								data-aos-delay="1000"
 								class="aos-init aos-animate"
 							>
-								Services
+								Technologies & standars
 							</h4>
 							<p
 								data-aos="fade-left"
 								data-aos-delay="1100"
 								class="aos-init aos-animate"
 							>
-								Firebase, Azure, Shopify
+								Git, NPM, Shopify, WordPress, Firebase, ClickUp
 							</p>
 						</div>
 					</div>
